--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -4,7 +4,9 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   text-align: center;
 }
-
+.cardContainer{
+  padding: 0 0;
+}  
 .card-title{
   font-weight: 500;
   font-size: 1.6em;
@@ -65,4 +67,9 @@
           width: 100%;
       }
   }
+}
+@media only screen and (max-width: 767px) {
+  .cardContainer{
+    padding: 0 3%;
+  }  
 }
